updates to code for training

--- a/notebooks/try_messidor.ipynb
+++ b/notebooks/try_messidor.ipynb
@@ -71,6 +71,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.build_index(k=5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
